Cycles X crashes if MESA_NO_ERROR is enabled #91489

Closed
opened 2021-09-17 17:25:18 +02:00 by Pavel Duong · 3 comments

System Information
Operating system: Clear Linux OS 35050
Graphics card: Intel(R) UHD Graphics 620 (KBL GT2)

Blender Version
Broken: ca9ece306400 (blender-3.0.0-alpha+cycles-x.ca9ece306400-linux.x86_64-release)
Worked: a1c65748c4 (blender-3.0.0-alpha+master.a1c65748c40d-linux.x86_64-release)

Short description of error
If environmental variable MESA_NO_ERROR is set to 1, then Cycles X crashes right after starting the render. Unsetting this variable or setting it to 0 fixes this issue.

This does not occur on pre-Cycles X builds.
This occurs even with blender-softwaregl.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Run blender with MESA_NO_ERROR=1
MESA_NO_ERROR=1 ./blender
  1. Set renderer to Cycles
  2. Either render in viewport or using F12
  3. Blender crashes

Below I'm appending blender.crash.txt that was created after the crash.
blender.crash.txt

**System Information** Operating system: Clear Linux OS 35050 Graphics card: Intel(R) UHD Graphics 620 (KBL GT2) **Blender Version** Broken: ca9ece306400 (`blender-3.0.0-alpha+cycles-x.ca9ece306400-linux.x86_64-release`) Worked: a1c65748c40d (`blender-3.0.0-alpha+master.a1c65748c40d-linux.x86_64-release`) **Short description of error** If environmental variable `MESA_NO_ERROR` is set to 1, then Cycles X crashes right after starting the render. Unsetting this variable or setting it to 0 fixes this issue. This does not occur on pre-Cycles X builds. This occurs even with `blender-softwaregl`. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Run blender with `MESA_NO_ERROR=1` ``` MESA_NO_ERROR=1 ./blender ``` 2. Set renderer to Cycles 3. Either render in viewport or using F12 4. Blender crashes Below I'm appending `blender.crash.txt` that was created after the crash. [blender.crash.txt](https://archive.blender.org/developer/F10448331/blender.crash.txt)
Author

Added subscriber: @vignette

Added subscriber: @vignette

This issue was referenced by 8d25aeb6a631fc941be72827134dec5b589e9ed4

This issue was referenced by 8d25aeb6a631fc941be72827134dec5b589e9ed4

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-17 19:29:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91489
No description provided.