Fix T91489: Cycles X crash when running with MESA_NO_ERROR